--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-## Welcom to Cloudene
-
-<!DOCTYPE html>
-<html>
-	<head>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/Services">Services</a></li>
-        		<li><a href="/Contact">Contact</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi this site is about cloud Services!</h1>
-				<p>Feel free to add this page in your book mark and come back again!
-This page is currently under contruction and will be online soon</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto: ">email</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Welcome to Cloudene
+---
+<div class="blurb">
+	<h1>Hi there, I'm Naveed!</h1>
+	<p>Feel free to add this page in your book mark and come back again! This page is currently under contruction and will be online soon</p>
+</div><!-- /.blurb -->
